--- a/site/sass/components/_card-study.scss
+++ b/site/sass/components/_card-study.scss
@@ -1,40 +1,53 @@
 @use 'sass:math';
 
 .card-study {
+  $bkpt-fablet: 420px;
+  $bkpt-tablet: 744px;
+  $bkpt-desktop: 1140px;
+  $bkpt-desktop-lg: 1440px;
+
   position: relative;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: min-content auto;
   border-radius: pxRem(10px);
   overflow: hidden;
 
-  &:first-child {
-    @include mq(744px) {
-      grid-column: 1 / 3;
-    }
+  &,
+  &__tile {
+    background-color: var(--white);
+  }
+
+  @include mq($bkpt-desktop) {
+    grid-template: auto / fluid(pxRem($bkpt-desktop), pxRem($bkpt-desktop-lg), pxRem(240px), pxRem(294px)) 1fr;
   }
 
   &__media {
-    aspect-ratio: 2 / 1;
+    height: 100%;
     object-fit: cover;
+    aspect-ratio: 2 / 1;
   }
 
   &__tile {
     display: grid;
-    grid-template-rows: max-content;
+    grid-template: max-content / pxRem(32px) auto pxRem(32px);
     height: 100%;
-    padding: 0 pxRem(32px) pxRem(32px);
-    background-color: var(--white);
+    padding-bottom: pxRem(32px);
 
     @include mq(0px 419px) {
       text-align: center;
     }
 
-    @include mq(420px) {
-      padding: 0 pxRem(24px) pxRem(24px);
+    @include mq($bkpt-fablet) {
+      grid-template-columns: pxRem(24px) auto pxRem(24px);
     }
 
-    @include mq(744px) {
-      padding: 0 pxRem(24px) pxRem(24px);
+    @include mq($bkpt-desktop) {
+      grid-template-columns: pxRem(24px) auto pxRem(20px);
+      padding-bottom: pxRem(32px);
+    }
+
+    > * {
+      grid-column: 2;
     }
   }
 
@@ -48,14 +61,14 @@
   }  
 
   &__tile-eyebrow {
-    margin-top: fluid(pxRem(375px), pxRem(420px), pxRem(32px), pxRem(35px));
+    margin-top: fluid(pxRem(375px), pxRem($bkpt-fablet), pxRem(32px), pxRem(35px));
   }
 
   &__tile-title {
     margin-top: pxRem(8px);
 
-    @include mq(420px) {
-      margin-top: fluid(pxRem(430px), pxRem(744px), pxRem(8px), pxRem(16px));
+    @include mq($bkpt-fablet) {
+      margin-top: fluid(pxRem(430px), pxRem($bkpt-tablet), pxRem(8px), pxRem(16px));
     }
   }
 
@@ -63,8 +76,22 @@
     align-self: flex-end;
     margin: pxRem(24px) auto 0;
 
-    @include mq(420px) {
+    @include mq($bkpt-fablet) {
       margin: pxRem(24px) auto 0 0;
+    }
+  }
+
+  &:first-child {
+    @include mq($bkpt-tablet) {
+      grid-column: 1 / 3;
+      grid-template: auto / auto fluid(pxRem($bkpt-tablet), pxRem($bkpt-desktop), pxRem(338px), pxRem(370px));
+    }
+    @include mq($bkpt-desktop) {
+      grid-template-columns: auto fluid(pxRem($bkpt-desktop), pxRem($bkpt-desktop-lg), pxRem(370px), pxRem(467px));
+    }
+    @include mq($bkpt-desktop-lg) {
+      grid-template: auto / auto;
+      padding: pxRem(98px) 0;
     }
   }
 
@@ -72,13 +99,15 @@
     &__media {
       aspect-ratio: 327 / 284;
 
-      @include mq(744px) {
+      @include mq($bkpt-tablet) {
+        aspect-ratio: 65 / 46;
+      }
+
+      @include mq($bkpt-desktop-lg) {
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
-        object-fit: cover;
       }
     }
 
@@ -86,17 +115,19 @@
       position: relative;
       text-align: center;
 
-      @include mq(744px) {
-        max-width: fluid(pxRem(744px), pxRem(1024px), pxRem(338px), pxRem(370px));
+      @include mq($bkpt-tablet) {
+        height: auto;
+        align-self: center;
         margin-left: auto;
-        padding: pxRem(67px);
+        padding: pxRem(46px) 0;
         text-align: center;
       }
-      @include mq(1024px) {
-        max-width: fluid(pxRem(1024px), pxRem(1440px), pxRem(370px), pxRem(467px));
-        margin-top: pxRem(98px);
-        margin-right: fluid(pxRem(1024px), pxRem(1440px), pxRem(80px), pxRem(118px));
-        margin-bottom: pxRem(98px);
+
+      @include mq($bkpt-desktop-lg) {
+        grid-template-columns: auto pxRem(345px) auto;
+        width: pxRem(465px);
+        margin-right: pxRem(118px);
+        padding: pxRem(68px) 0 pxRem(84px);
         border-radius: pxRem(10px);
       }
     }
@@ -108,27 +139,38 @@
         transform: translateY(-50%);
       }
     }
+
     
     &__tile-eyebrow {
       margin-top: 0;
-
-      @include mq(744px) {
+      
+      @include mq($bkpt-tablet) {
         margin-top: pxRem(30px);
       }
     }
 
+    &__tile-title {
+      margin-top: pxRem(18px);
+    }
+
     &__tile-cta {
-      @include mq(420px) {
+      @include mq($bkpt-fablet) {
         margin: pxRem(24px) auto 0;
       }
 
-      @include mq(744px) {
+      @include mq($bkpt-tablet) {
         margin: pxRem(48px) auto 0;
       }
 
-      @include mq(1024px) {
+      @include mq($bkpt-desktop) {
         margin-top: pxRem(32px);
       }
     }
-  }  
+  }
+
+  &--no-logo:first-child & {
+    &__tile-eyebrow {
+      margin-top: fluid(pxRem(375px), pxRem($bkpt-fablet), pxRem(32px), pxRem(35px));
+    }
+  }
 }
