👕 Run prettier for new config
Prettier 2.0 updated some default, requiring a re-run so everything is happy

--- a/site/sass/components/_card.scss
+++ b/site/sass/components/_card.scss
@@ -109,7 +109,8 @@
     /* stylelint-disable selector-no-qualifying-type */
     a[href^='http://'] &,
     a[href^='https://'] &,
-    a[href^='//'] & {
+    a[href^='//'] &
+    {
       transform: rotate(-45deg);
     }
     /* stylelint-enable selector-no-qualifying-type */
