Fix start/flex-start property value warnings

--- a/site/sass/components/_item-grid.scss
+++ b/site/sass/components/_item-grid.scss
@@ -35,7 +35,7 @@
 
   &--community & {
     &__content {
-      align-items: start;
+      align-items: flex-start;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
