--- a/site/sass/components/_footer.scss
+++ b/site/sass/components/_footer.scss
@@ -8,7 +8,7 @@
   &__container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: start;
+    justify-content: flex-start;
     margin: 0 auto;
     padding: pxRem(16px) pxRem(42px) pxRem(26px);
 
@@ -48,7 +48,7 @@
     align-items: center;
     display: flex;
     flex-grow: 1;
-    justify-content: start;
+    justify-content: flex-start;
     list-style: none;
     padding: pxRem(16px) 0;
   }
