--- a/site/_components/image-card.njk
+++ b/site/_components/image-card.njk
@@ -25,12 +25,8 @@
   </div>
 
   <div class="image-card__wrapper">
-    <h3 class="type--h3">
-      {{content.title}}
-    </h3>
-    <p class="type--large">
-      {{content.copy}}
-    </p>
+    <h3 class="type--h3">{{content.title}}</h3>
+    <p class="type--large">{{content.copy}}</p>
     <a class="cta cta--link" href="{{cta.url}}">{{cta.text}}</a>
   </div>
 </article>
