--- a/site/_components/inline-svg.njk
+++ b/site/_components/inline-svg.njk
@@ -1,7 +1,7 @@
 <!--{#
   SVGs that should be inlined directly to the site
 #}-->
-<svg style="height: 0; width: 0; opacity: 0;" tabindex="-1" xmlns="http://www.w3.org/2000/svg">
+<svg style="height: 0; width: 0; opacity: 0" tabindex="-1" xmlns="http://www.w3.org/2000/svg">
   <defs>
     <svg id="logo-ball" viewBox="0 0 86.12 86.12">
       <defs>
@@ -108,7 +108,7 @@
             <g class="cls-2">
               <path d="M43.06 23a19.57 19.57 0 00-19.57 19.57v.49a19.57 19.57 0 0119.57-19.57h43.06V23z" fill-opacity=".2" fill="#3e2723" />
               <path d="M60 52.85a19.53 19.53 0 01-33.86 0L0 8.06v.49l26.11 44.79a19.55 19.55 0 0033.87 0v-.49z" fill-opacity=".1" fill="#fff" />
-              <path d="M43.55 23.49h-.24a19.56 19.56 0 010 39.12h.24a19.58 19.58 0 000-39.15z" style="isolation:isolate" opacity=".1" fill="#3e2723" />
+              <path d="M43.55 23.49h-.24a19.56 19.56 0 010 39.12h.24a19.58 19.58 0 000-39.15z" style="isolation: isolate" opacity=".1" fill="#3e2723" />
               <path class="cls-22" d="M60.19 53.5a19.45 19.45 0 001.71-15.68 19.28 19.28 0 01-1.89 15L41 86.13h.57L60.2 53.52z" />
             </g>
             <g class="cls-2">
