--- a/site/en/style-guide/typography/cta.njk
+++ b/site/en/style-guide/typography/cta.njk
@@ -8,9 +8,7 @@ intro: |-
 
 {% from 'icon.njk' import icon %}
 
-<div class="type">
-  {{ intro | safe }}
-</div>
+<div class="type">{{ intro | safe }}</div>
 
 <section class="style-guide__section">
   <div class="style-guide__separate-items">
