--- a/site/en/style-guide/typography/extras.njk
+++ b/site/en/style-guide/typography/extras.njk
@@ -6,9 +6,7 @@ intro: |-
   These typographic styles are built on top of the [core styles](../core) and are usually used as part of long-form text. As such, these are all displayed wrapped in `.type--base` from core styles, but they will adapt to whatever text section they're added to.
 ---
 
-<div class="type">
-  {{ intro | safe }}
-</div>
+<div class="type">{{ intro | safe }}</div>
 
 <section class="style-guide__section">
   <div class="type--base">
