--- a/site/_components/form/input.njk
+++ b/site/_components/form/input.njk
@@ -12,8 +12,6 @@
 {% macro input(input, id) -%}
 <span class="form__group">
   <input id="{{ id }}" {% if input.error %} aria-invalid="false" aria-errormessage="invalid-{{ input.name }}" {% endif %} {% if input.type === "email" %} pattern="^[+a-zA-Z0-9_.!#$%&*\\/=?^`{|}~-]+@([a-zA-Z0-9-]+\.)+[a-zA-Z0-9]{2,63}$" {% endif %} name="{{ input.name }}" type="{{ input.type }}" class="form__field form__field--input" {% if input.required %} required aria-required="true" {% endif %} {% if input.value %} value="{{ input.value }}" {% endif %}/>
-  <label class="form__label" for="{{ id }}">
-    {{ input.label }}
-  </label>
+  <label class="form__label" for="{{ id }}">{{ input.label }}</label>
 </span>
 {%- endmacro %}
