--- a/site/_generated/404.njk
+++ b/site/_generated/404.njk
@@ -13,8 +13,6 @@ hideNewsletter: true
   <div class="page-not-found">
     <h1 class="type--h1">404</h1>
     <h2 class="type--h3 page-not-found__title">{{l10n['404'].title}}</h2>
-    <div class="page-not-found__search">
-      {{searchBox(l10n.search.placeholder, locale.code, {background: 'search-box__grey',extended:'search-box-extended', close:'search-box__close-hidden' })}}
-    </div>
+    <div class="page-not-found__search">{{searchBox(l10n.search.placeholder, locale.code, {background: 'search-box__grey',extended:'search-box-extended', close:'search-box__close-hidden' })}}</div>
   </div>
 </div>
