--- a/site/_generated/index.njk
+++ b/site/_generated/index.njk
@@ -13,56 +13,36 @@ hideNewsletter: true
 {% from 'hero-animated.njk' import heroAnimated %} {% from 'card-stats.njk' import cardStats %} {% from 'image-card.njk' import imageCard %} {% from 'hero--cta.njk' import heroCta %} {% from 'item-grid.njk' import itemGrid %} {% from 'featured-content.njk' import featuredContent %} {% from 'call-out.njk' import callOut %} {% from 'footnotes.njk' import footnotes %}
 <div id="home" class="wrapper--hidden-x">
   <!-- Hero Animation -->
-  <header id="home__hero" class="wrapper wrapper--full-bleed wrapper--no-bottom wrapper--no-top">
-    {{ heroAnimated(l10n.home.hero.heading, l10n.home.hero.cta, l10n.home.hero.img) }}
-  </header>
+  <header id="home__hero" class="wrapper wrapper--full-bleed wrapper--no-bottom wrapper--no-top">{{ heroAnimated(l10n.home.hero.heading, l10n.home.hero.cta, l10n.home.hero.img) }}</header>
 
   <!-- Chrome OS Stats -->
-  <section id="home__stats" class="wrapper wrapper--full-bleed wrapper--no-top wrapper--no-bottom" aria-label="{{ l10n.home.results.desc }}">
-    {{ cardStats(l10n.home.results.content, l10n.home.results.img, l10n.home.results.cta, l10n.home.results.stats, l10n.home.results.footnote) }}
-  </section>
+  <section id="home__stats" class="wrapper wrapper--full-bleed wrapper--no-top wrapper--no-bottom" aria-label="{{ l10n.home.results.desc }}">{{ cardStats(l10n.home.results.content, l10n.home.results.img, l10n.home.results.cta, l10n.home.results.stats, l10n.home.results.footnote) }}</section>
 
   <!-- Site Subnav -->
-  <div id="home__subnav" class="wrapper wrapper--padded">
-    {{ itemGrid(l10n.home.subnav.content.title, l10n.nav, l10n.home.subnav.modifiers, l10n.locale.code) }}
-  </div>
+  <div id="home__subnav" class="wrapper wrapper--padded">{{ itemGrid(l10n.home.subnav.content.title, l10n.nav, l10n.home.subnav.modifiers, l10n.locale.code) }}</div>
 
   <!-- Using Chrome OS -->
-  <section id="home__using" class="wrapper wrapper--full-top wrapper--full-bottom wrapper--rhythm wrapper--padded" aria-label="{{ l10n.home.onAndWith.desc }}">
-    {% for item in l10n.home.onAndWith.cards %} {{ imageCard(item.images, item.content, item.cta, item.modifiers) }} {% endfor %}
-  </section>
+  <section id="home__using" class="wrapper wrapper--full-top wrapper--full-bottom wrapper--rhythm wrapper--padded" aria-label="{{ l10n.home.onAndWith.desc }}">{% for item in l10n.home.onAndWith.cards %} {{ imageCard(item.images, item.content, item.cta, item.modifiers) }} {% endfor %}</section>
 
   <!-- Recent Articles -->
   {% if landingCollections.posts.length > 0 %}
-  <div id="home__articles" class="wrapper wrapper--full-bleed wrapper--padding wrapper__contained wrapper__background wrapper__green-circle wrapper--bumper-top wrapper--bumper-bottom wrapper--padded wrapper__responsive-circle">
-    {{ itemGrid(l10n.home.posts.title, landingCollections.homePosts , l10n.home.posts.modifiers) }}
-  </div>
+  <div id="home__articles" class="wrapper wrapper--full-bleed wrapper--padding wrapper__contained wrapper__background wrapper__green-circle wrapper--bumper-top wrapper--bumper-bottom wrapper--padded wrapper__responsive-circle">{{ itemGrid(l10n.home.posts.title, landingCollections.homePosts , l10n.home.posts.modifiers) }}</div>
   {% endif %}
 
   <!-- Featured Case Story -->
   {% if landingCollections.featured %}
-  <div id="home__featured" class="wrapper wrapper__yellow-circle wrapper--padded wrapper--bumper-top wrapper--full-bottom">
-    {{ featuredContent(landingCollections.featured.first , l10n.home.featured.modifiers) }}
-  </div>
+  <div id="home__featured" class="wrapper wrapper__yellow-circle wrapper--padded wrapper--bumper-top wrapper--full-bottom">{{ featuredContent(landingCollections.featured.first , l10n.home.featured.modifiers) }}</div>
   {% endif %}
 
   <!-- Chromebooks -->
-  <div id="home__chromebooks" class="wrapper wrapper--background wrapper--no-bottom wrapper--padded">
-    {{ heroCta(l10n.home.chromebook.content, l10n.home.chromebook.image, l10n.home.chromebook.cta) }}
-  </div>
+  <div id="home__chromebooks" class="wrapper wrapper--background wrapper--no-bottom wrapper--padded">{{ heroCta(l10n.home.chromebook.content, l10n.home.chromebook.image, l10n.home.chromebook.cta) }}</div>
 
   <!-- Community -->
-  <div id="home__community" class="wrapper--full-bleed wrapper--padding wrapper--padding-full-top wrapper__contained wrapper__background wrapper--padded">
-    {{ itemGrid(l10n.home.community.title, l10n.community, l10n.home.community.modifiers) }}
-  </div>
+  <div id="home__community" class="wrapper--full-bleed wrapper--padding wrapper--padding-full-top wrapper__contained wrapper__background wrapper--padded">{{ itemGrid(l10n.home.community.title, l10n.community, l10n.home.community.modifiers) }}</div>
 
   <!-- Subscribe -->
-  <div class="wrapper wrapper--no-bottom wrapper--padded">
-    {{ callOut(l10n.newsletter.subscribe.content, l10n.newsletter.subscribe.cta) }}
-  </div>
+  <div class="wrapper wrapper--no-bottom wrapper--padded">{{ callOut(l10n.newsletter.subscribe.content, l10n.newsletter.subscribe.cta) }}</div>
 
   <!-- Footnotes -->
-  <footer class="wrapper wrapper--full-bleed wrapper__background wrapper--no-bottom wrapper--padded wrapper__contained">
-    {{ footnotes(l10n.home.footnotes.notes) }}
-  </footer>
+  <footer class="wrapper wrapper--full-bleed wrapper__background wrapper--no-bottom wrapper--padded wrapper__contained">{{ footnotes(l10n.home.footnotes.notes) }}</footer>
 </div>
