--- a/site/_generated/offline.njk
+++ b/site/_generated/offline.njk
@@ -13,8 +13,6 @@ hideNewsletter: true
   <div class="page-not-found">
     <h1 class="type--h1">{{l10n.offline.title}}</h1>
     <p class="type--h3 page-not-found__title">{{l10n.offline.desc}}</p>
-    <div class="page-not-found__search page-not-found__search--hidden" data-offline-search="true">
-      {{searchBox(l10n.search.placeholder, locale.code, {background: 'search-box__grey',extended:'search-box-extended', close:'search-box__close-hidden' })}}
-    </div>
+    <div class="page-not-found__search page-not-found__search--hidden" data-offline-search="true">{{searchBox(l10n.search.placeholder, locale.code, {background: 'search-box__grey',extended:'search-box-extended', close:'search-box__close-hidden' })}}</div>
   </div>
 </div>
