--- a/site/_generated/subscribe.njk
+++ b/site/_generated/subscribe.njk
@@ -10,9 +10,7 @@ hideNewsletter: true
 
 {% from 'form.njk' import form %}
 
-<article class="wrapper wrapper--full-bleed wrapper--padded wrapper--padding wrapper--full-circles">
-  {{ form(l10n.newsletter.settings, l10n.newsletter.content, l10n.newsletter.fields, l10n.locale.code) }}
-</article>
+<article class="wrapper wrapper--full-bleed wrapper--padded wrapper--padding wrapper--full-circles">{{ form(l10n.newsletter.settings, l10n.newsletter.content, l10n.newsletter.fields, l10n.locale.code) }}</article>
 
 <template id="message--success">
   <p class="message--tip message form__message">{{l10n.newsletter.thankYou.inline}}</p>
