--- a/site/_layouts/article.njk
+++ b/site/_layouts/article.njk
@@ -13,32 +13,22 @@ layout: _wrapper
 
   <div class="article__eyebrow">
     {% if parent %}
-    <a class="cta cta--back" href="/{{locale.code}}/{{ parent.url }}">
-      {{ microcopy.breadcrumbs.replace('((t))', parent.title) }}
-    </a>
+    <a class="cta cta--back" href="/{{locale.code}}/{{ parent.url }}">{{ microcopy.breadcrumbs.replace('((t))', parent.title) }}</a>
     {% endif %}
   </div>
 
   <h1 class="article__header type--h2">{{title}}</h1>
 
-  <aside class="article__info">
-    {% if section == 'posts' %}{{ dateTime(microcopy.datePosted, page.date, locale.code, options={ year: 'numeric', month: 'long', day: 'numeric' }) }}{{ authorsList(authors, contributors, microcopy) }}{% elif section == 'case-studies' %}{{ appInfo(app) }}{% endif %}
-  </aside>
+  <aside class="article__info">{% if section == 'posts' %}{{ dateTime(microcopy.datePosted, page.date, locale.code, options={ year: 'numeric', month: 'long', day: 'numeric' }) }}{{ authorsList(authors, contributors, microcopy) }}{% elif section == 'case-studies' %}{{ appInfo(app) }}{% endif %}</aside>
 
   {% if content | toc %}
-  <aside class="article__toc">
-    {{ tableOfContents(content, microcopy.toc.title, {title: microcopy.skip.toc, id: 'article'}) }}
-  </aside>
+  <aside class="article__toc">{{ tableOfContents(content, microcopy.toc.title, {title: microcopy.skip.toc, id: 'article'}) }}</aside>
   {% endif %} {% set topics = { label: microcopy.topics, items: tags } %}{% if section == 'case-studies' %}{% set updated = { label: microcopy.lastUpdated, date: page.date, locale: locale.code } %} {% endif %}
   <section class="article__body" id="article">
-    <div class="article__content type">
-      {{ content | safe }}
-    </div>
+    <div class="article__content type">{{ content | safe }}</div>
     {{ articleFooter(locale.code,topics, updated, modifiers={custom:'article__content'}) }}
   </section>
 
-  <section class="article__recommended wrapper__contained wrapper--padding wrapper--padded">
-    {{itemGrid(microcopy.recommended, title | related(locale.code, page.url))}}
-  </section>
+  <section class="article__recommended wrapper__contained wrapper--padding wrapper--padded">{{itemGrid(microcopy.recommended, title | related(locale.code, page.url))}}</section>
 </article>
 {{ backToTop() }}
