--- a/site/_layouts/blog.njk
+++ b/site/_layouts/blog.njk
@@ -4,6 +4,4 @@ layout: _wrapper
 
 <h1 class="type--var-large">{{ title }}</h1>
 
-<article class="type">
-  {{ content | safe }}
-</article>
+<article class="type">{{ content | safe }}</article>
