--- a/site/sass/style.scss
+++ b/site/sass/style.scss
@@ -84,7 +84,8 @@
 @import 'components/pagination';
 @import 'components/page-not-found';
 @import 'components/pwa-checklist';
-
+@import 'components/fifty-fifty';
+@import 'components/shape';
 // Page Layouts
 @import 'layouts/tech-detail';
 @import 'layouts/article';
