--- a/site/sass/components/_fifty-fifty.scss
+++ b/site/sass/components/_fifty-fifty.scss
@@ -2,9 +2,9 @@
 
 .fifty-fifty {
   display: grid;
-  place-items: center;
   margin-bottom: pxRem(70px);
-  
+  place-items: center;
+
   @include mq(420px) {
     column-gap: pxRem(20px);
     grid-template-columns: repeat(auto-fit, minmax(pxRem(280px), 1fr));
@@ -12,13 +12,13 @@
 
   @include mq(608px) {
     margin-bottom: 0;
-    padding: fluid(pxRem(608px), pxRem(1440px), pxRem(90px), pxRem(113px)) 0 fluid(pxRem(608px), pxRem(1440px), pxRem(0px), pxRem(40px));
+    padding: fluid((608px 1440px), (90px 113px)) 0 fluid((608px 1440px), (0 40px));
   }
 
   &__content {
-    max-width: fluid(pxRem(744px), pxRem(1440px), pxRem(340px), pxRem(490px));
     margin-bottom: pxRem(30px);
-    margin-left: fluid(pxRem(1140px), pxRem(1600px), pxRem(0px), pxRem(122px));
+    margin-left: fluid((1140px 1600px), (0 122px));
+    max-width: fluid((744px 1440px), (340px 490px));
     text-align: center;
 
     @include mq(608px) {
@@ -37,50 +37,50 @@
   }
 
   &__image-wrapper {
-    position: relative;
     display: grid;
-    place-content: center;
     max-width: min(100%, pxRem(570px));
+    place-content: center;
+    position: relative;
 
     .shape--bracket-circle {
+      height: fluid((320px 1440px), (308px 420px));
+      left: calc(100% + pxRem(24px));
       position: absolute;
       top: 50%;
-      left: calc(100% + pxRem(24px));
-      width: fluid(pxRem(320px), pxRem(1440px), pxRem(308px), pxRem(420px));
-      height: fluid(pxRem(320px), pxRem(1440px), pxRem(308px), pxRem(420px));
       transform: translate(-50%, -50%);
+      width: fluid((320px 1440px), (308px 420px));
 
       @include mq(608px) {
+        left: math.percentage(math.div(2, 3));
         top: math.percentage(math.div(1, 3));
-        left: math.percentage(math.div(2, 3));        
       }
     }
 
     .shape--semicircle {
       --circle-radius: 100px;
       --circle-offset: 100px;
+      height: 100px;
+      left: 3%;
       position: absolute;
       top: 40%;
-      left: 3%;
-      width: 200px;
-      height: 100px;
       transform: rotate(155deg);
+      width: 200px;
     }
   }
 
   &__shapes {
+    height: 100%;
     position: relative;
     width: 100%;
-    height: 100%;
   }
 
   &__image {
     position: relative;
 
     &:not(:first-of-type) {
+      left: 0;
       position: absolute;
       top: -15%;
-      left: 0;
       transform: scale(0.5);
     }
   }
